--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "lua.targetVersion": "5.3"
+    "lua.targetVersion": "5.3",
+    "Lua.workspace.library": [
+        "lib\\Aseprite-Library\\Aseprite-Library.lua"
+    ]
 }
